chore: [CO-982] improve tests using helper methods to perform common tasks